# NetLab2

./: .gitignore  Cargo.toml  README.md
dhcp-client/: Cargo.toml
dhcp-client/src/: addresses.rs  dhcp.rs  lib.rs  main.rs
dhcp-client/src/dhcp/: persistency.rs
shared/src/: errors.rs  helpers.rs  lib.rs  serialization.rs
shared/src/helpers/: caret.rs  shared.rs
src/: main.rs
tftp-server/: Cargo.toml
tftp-server/src/: lib.rs  tftp.rs
