[package]
name = "dhcp-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "dhcp_client"

[[bin]]
name = "dhcp-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rand = "0.8"
mac_address = "1.1"
# pnet = "0.28"
pnet = "0.26"
packet-builder = "0.5"
